<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_fragment_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.login.LoginFragment">

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/hello_again"
            android:textColor="@color/colorBlack"
            android:textSize="32.sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fill_your_details_to_continue"
            android:textSize="16.sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLogin">

        </TextView>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/email_address"
            android:textColor="@color/colorBlack"
            android:textSize="16.sp"
            app:layout_constraintBottom_toTopOf="@+id/editText_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_description"
            app:layout_constraintVertical_chainStyle="packed">

        </TextView>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/colorGrayBackground"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/password"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editText_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_email">

        </TextView>

        <EditText
            android:id="@+id/editText_pass"
            android:layout_width="wrap_content"
            android:layout_height="48.dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/example_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/colorGrayBackground"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass" />


        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorButton"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_pass">

        </Button>


        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorWhite"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_new_user">

        </Button>

        <TextView
            android:id="@+id/txt_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/new_user"
            android:textColor="@color/colorGrayBackground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_create_account"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_create_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>